hphp/hack/test/typecheck/strict_switch/string_class_const.php.exp
File "string_class_const.php", line 36, characters 10-13:
Redundant `case` statement (Typing[4021])
  File "string_class_const.php", line 34, characters 10-13:
  `B` already handled here
File "string_class_const.php", line 50, characters 10-13:
Redundant `case` statement (Typing[4021])
  File "string_class_const.php", line 48, characters 10-13:
  `A` already handled here
File "string_class_const.php", line 71, characters 10-13:
Switching on `string` but using constant from `G` (Typing[4023])
  File "string_class_const.php", line 69, characters 38-43:
  expecting `string` based on this
